--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@footron/controls-client": "0.1.0",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "connect": "^3.7.0",
@@ -46,5 +47,8 @@
     "vite": "^2.4.1",
     "vite-tsconfig-paths": "^3.3.13",
     "yargs": "^17.0.1"
+  },
+  "resolutions": {
+    "@footron/controls-client": "portal:../controls-client"
   }
 }
